# logrustate

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: compress.rs  config.rs  main.rs  rotator.rs  state.rs
