[package]
name = "logrustate"
version = "0.1.2"
edition = "2024"
authors = ["Anilcan Kara <anilcan@kara.dev>"]
description = "A modern, drop-in replacement for logrotate — written in Rust"
license = "MIT"
repository = "https://github.com/anilcan-kara/logrustate"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
